# learningopengl

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
shaders/: base.vert  basic.frag  instanced.vert
src/: area.rs  chunk.rs  component.rs  draw.rs  frustum.rs  init.rs  input.rs  main.rs  map.rs  mesh.rs  shader.rs  texture.rs  util.rs
src/mesh/: constant.rs  vertex.rs
src/plugin/: mod.rs
